--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="calc">
-    <img src="img/backgr.png" alt="Калькулятор фон">
+    <img src="backgr.png" alt="Калькулятор фон">
     <div class="screen">
       0 <!--ограничение 24 симв-->
     </div>
